# pyflink-features-pipelines

./: .envrc  .gitignore  README.md  jars_list.txt  pyproject.toml  scripts.sh  workspace.toml
avro/kinesis/algo/: algo-predictions-device-owner.avsc  algo-predictions-income.avsc  algo-predictions-risk.avsc
avro/kinesis/fairmoney-tube/: application-finalised.avsc  application-loan-created.avsc  application-loan-disbursed.avsc  face-match-performed.avsc  kyc-tier-upgraded.avsc  lendmate-application-updated.avsc  raw-external-service-response-received.avsc  user-connection-created.avsc
avro/kinesis/reports-parsing-service/: parsed-first-central-credit-report.avsc  parsed-ng-bvn-nibss-igree-response.avsc  parsed-ng-bvn-nibss-v1-response.avsc  parsed-ng-bvn-smile-id-response.avsc  parsed-seon-ios-response.avsc
avro/kinesis/stream-enrichment-service/: application-updated-with-reverse-geocoding-event.avsc
bases/pfp/sample_flink_transformations/: __init__.py  core.py  map_functions.py  stateful_examples.py  stateless_examples.py
bases/pfp/sample_kda_pipeline/: __init__.py
components/pfp/common_utils/: __init__.py  date.py  functions.py
components/pfp/flink_datastream_sources/: __init__.py
components/pfp/flink_jobs/: __init__.py
components/pfp/schema_registry/: __init__.py  core.py
development/: sample_config_builder.py  sample_pipeline.py  sample_streaming_pipeline.py  schema_registry.py
development/avro/: branch-event.avsc  lendmate-application-updated.avsc  loan-data-updated.avsc
development/config/: sample-pipeline-local.json
(+40 files in other folders)
